Anchored brush doesn't work properly #46126

Closed
opened 2015-09-16 15:25:58 +02:00 by item412 · 6 comments

System Information
win7

Blender Version
Broken: 2.75.4 e3ff9b2
Worked: 2.74

Short description of error

size of anchored brush stops increasing after cursor leaving mesh

2.75
d6faf690f5025f01b2d22146731a8f4d.gif

2.74
d37154533bcd386ae169b9db11386793.gif

Exact steps for others to reproduce the error

set stroke method to anchored

**System Information** win7 **Blender Version** Broken: 2.75.4 e3ff9b2 Worked: 2.74 **Short description of error** size of anchored brush stops increasing after cursor leaving mesh 2.75 ![d6faf690f5025f01b2d22146731a8f4d.gif](https://archive.blender.org/developer/F233645/d6faf690f5025f01b2d22146731a8f4d.gif) 2.74 ![d37154533bcd386ae169b9db11386793.gif](https://archive.blender.org/developer/F233647/d37154533bcd386ae169b9db11386793.gif) **Exact steps for others to reproduce the error** set stroke method to anchored
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @item412

Added subscriber: @item412
Author
[anch.blend](https://archive.blender.org/developer/F233650/anch.blend)

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Campbell Barton self-assigned this 2015-09-16 17:09:10 +02:00

This issue was referenced by cb4e358735

This issue was referenced by cb4e3587353c0f477feef459e12ff14872143c9c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46126
No description provided.