Fix T46126: Anchored sculpt fail when cursor leaves mesh